Changed proxy path for iRODS-REST & changed default resource into rootResc

--- a/irods-frontend/irods-rest.properties
+++ b/irods-frontend/irods-rest.properties
@@ -3,6 +3,6 @@ irods.port=1247
 irods.zone=nlmumc
 utilize.packing.streams=true
 auth.type=STANDARD
-default.storage.resource=demoResc
+default.storage.resource=rootResc
 web.interface.url=
 cors.allow=true
