--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     privileged: true
   db:
     image: mysql:5.6
-    hostname: irods-db
+    hostname: db
     environment:
       MYSQL_DATABASE: pacman
       MYSQL_ROOT_PASSWORD: foobar
