Upgraded to MirthConnect version 3.4.1.8057.b139 Added mirth.secrets.cfg for ENV variables Load MirthConnect channels from bitbucket using SSH keys Added configuration file for Mirth CLI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,9 @@ services:
       - "9443:9443"
     environment:
       PGPASSWORD: foobar
+      BITBUCKET_SERVER: ${BITBUCKET_SERVER}
+      BITBUCKET_SERVER_PORT: ${BITBUCKET_SERVER_PORT}
+      BITBUCKET_MIRTH_CHANNEL_REPO: ${BITBUCKET_MIRTH_CHANNEL_REPO}
     volumes:
       - /etc/localtime:/etc/localtime:ro
   proxy:
