--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,4 @@
 version: '2'
-### Limitation: Environment variables will only be populated if you’re using the legacy version 1 Compose file format.
-### Solution: move declaration of these ENV variables to the rit.sh wrapper
 services:
   pacman:
     build: pacman/
@@ -15,11 +13,11 @@ services:
       - ../cloudbrowser_module:/var/www/html/sites/all/modules/cloudbrowser_module
       - ../fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
     environment:
-    # TODO: Change the names of these variables in rit-pacman source code
-      IRODS_FRONTEND_ENV_VIRTUAL_HOST: ${IRODS_FRONTEND_ENV_VIRTUAL_HOST}
-      IRODS_1_PORT_1247_TCP_ADDR: ${IRODS_1_PORT_1247_TCP_ADDR}
-      IRODS_FRONTEND_1_PORT_80_TCP_ADDR: ${IRODS_FRONTEND_1_PORT_80_TCP_ADDR}
-      IRODS_ENV_RODS_PASSWORD: ${IRODS_ENV_RODS_PASSWORD}
+      # TODO: Change the names of these variables in rit-pacman source code
+      IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
+      IRODS_1_PORT_1247_TCP_ADDR: irods
+      IRODS_FRONTEND_1_PORT_80_TCP_ADDR: irods-frontend
+      IRODS_ENV_RODS_PASSWORD: irods
       VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
       OLS_URL: http://fhml-srv018.unimaas.nl:8081/ols-boot
   irods:
@@ -43,8 +41,6 @@ services:
     environment:
       RODS_PASSWORD: irods
       PGPASSWORD: foobar
-      #INGEST_MOUNT: //fhml-srv002.unimaas.nl/ingest
-      #INGEST_USER: p.vanschayck
       LDAP_USER: M4i-nano-wiki
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
     volumes:
