--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,8 @@ services:
     image: jwilder/nginx-proxy
     environment:
       DEFAULT_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
-    #log_driver: none
+    logging:
+      driver: none
     ports:
       - "80:80"
     volumes:
