Make resource server a variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       # TODO: Change the names of these variables in rit-pacman source code
       IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
       IRODS_1_PORT_1247_TCP_ADDR: irods
+      IRODS_RESOURCE_HOST: ires
       IRODS_FRONTEND_1_PORT_80_TCP_ADDR: irods-frontend
       IRODS_ENV_RODS_PASSWORD: irods
       VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
