--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,14 +75,14 @@ services:
   metalnx:
     image: metalnx/metalnx-web:1.0-latest
     hostname: metalnx
-    ports:
-        - "8080:8080"
     environment:
       IRODS_HOST: irods
       IRODS_PORT: 1247
       IRODS_ZONE: nlmumc
       IRODS_USER: rods
       IRODS_PASS: irods
+      VIRTUAL_HOST: metalnx.${RIT_ENV}.rit.unimaas.nl
+      VIRTUAL_PORT: 8080
     volumes:
       - /etc/localtime:/etc/localtime:ro
   proxy:
