Moved reading of secrets file to entrypoint phase Changed typo in database creation Overwrite known_hosts instead of appending Specified which channels-branch to clone Updated rsa key

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,24 +93,9 @@ services:
       - "9443:9443"
     environment:
       PGPASSWORD: foobar
-      BITBUCKET_SERVER: ${BITBUCKET_SERVER}
-      BITBUCKET_SERVER_PORT: ${BITBUCKET_SERVER_PORT}
-      BITBUCKET_MIRTH_CHANNEL_REPO: ${BITBUCKET_MIRTH_CHANNEL_REPO}
     volumes:
       - /etc/localtime:/etc/localtime:ro
-  mirthconnect:
-    build: mirthconnect/
-    hostname: mirthconnect
-    ports:
-      - "9090:9090"
-      - "9443:9443"
-    environment:
-      PGPASSWORD: foobar
-      BITBUCKET_SERVER: ${BITBUCKET_SERVER}
-      BITBUCKET_SERVER_PORT: ${BITBUCKET_SERVER_PORT}
-      BITBUCKET_MIRTH_CHANNEL_REPO: ${BITBUCKET_MIRTH_CHANNEL_REPO}
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
+      - ./mirth.secrets.cfg:/etc/secrets:ro
   proxy:
     image: jwilder/nginx-proxy
     environment:
