--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -1,6 +1,7 @@
-iRodsUser = rods
-iRodsPassword = irods
-iRodsURLMessage = http://frontend/rest/fileContents/nlmumc/home/m.coonen/mirth_hl7_flow
-iRodsURLMetaData = http://frontend/rest/dataObject/nlmumc/home/m.coonen/mirth_hl7_flow
-PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
-PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
+cfg_iRodsUser = rods
+cfg_iRodsPassword = irods
+cfg_iRodsRestURL = http://frontend.RIT_ENV.rit.unimaas.nl/rest
+cfg_OlsApiURL = http://fhml-srv018.unimaas.nl:8081/ols-boot/api
+cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
+cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
+cfg_SolrURL = http://fhml-srv020.unimaas.nl:8984/solr
