--- a/mirthconnect/Dockerfile
+++ b/mirthconnect/Dockerfile
@@ -9,15 +9,7 @@ RUN apt-get update \
     postgresql-client \
     netcat
 
-### Preparations for git clone from bitbucket. Cloning the repo can only be done during runtime --> see docker-entrypoint.sh
-# Copy over private key, and set permissions
-ADD id_rsa /root/.ssh/id_rsa
-RUN chmod 400 /root/.ssh/id_rsa
-# Create known_hosts
-RUN touch /root/.ssh/known_hosts
-
-
-# Mirth Connect is run with user `connect`, uid = 1000
+# Mirth Connect is run with user 'mirth', uid = 1000
 # If you bind mount a volume from the host or a data container,
 # ensure you use the same uid
 RUN useradd -u 1000 mirth
