--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -1,6 +1,6 @@
 cfg_iRodsUser = rods
 cfg_iRodsPassword = irods
-cfg_iRodsRestURL = http://frontend.RIT_ENV.rit.unimaas.nl/rest
+cfg_iRodsRestURL = http://irods-frontend/rest
 cfg_OlsApiURL = http://fhml-srv018.unimaas.nl:8081/ols-boot/api
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
 cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
