--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -4,5 +4,5 @@ cfg_iRodsRestURL = http://irods-frontend/rest
 cfg_OlsApiURL = http://fhml-srv018.unimaas.nl:8081/ols-boot/api
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
 cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
-cfg_SolrURL = http://fhml-srv020.unimaas.nl:8984/solr
+cfg_SolrURL = http://solr:8983/solr
 
