--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     hostname: pacman
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ../handsontable:/var/www/html/sites/all/modules/handsontable
-      - ../islandora_ontology_autocomplete:/var/www/html/sites/all/modules/islandora_ontology_autocomplete
-      - ../rit-pacman:/var/www/html/sites/all/modules/pacman
-      - ../rit_forms:/var/www/html/sites/all/modules/rit_forms
-      - ../rit_faker:/var/www/html/sites/all/modules/rit_faker
-      - ../cloudbrowser_module:/var/www/html/sites/all/modules/cloudbrowser_module
-      - ../fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
+      - ./externals/handsontable:/var/www/html/sites/all/modules/handsontable
+      - ./externals/islandora_ontology_autocomplete:/var/www/html/sites/all/modules/islandora_ontology_autocomplete
+      - ./externals/rit-pacman:/var/www/html/sites/all/modules/pacman
+      - ./externals/rit_forms:/var/www/html/sites/all/modules/rit_forms
+      - ./externals/rit_faker:/var/www/html/sites/all/modules/rit_faker
+      - ./externals/cloudbrowser_module:/var/www/html/sites/all/modules/cloudbrowser_module
+      - ./externals/fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
     environment:
       # TODO: Change the names of these variables in rit-pacman source code
       IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
@@ -35,8 +35,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
-      - ../irods-ruleset:/rules
-      - ../irods-microservices:/microservices
+      - ./externals/irods-ruleset:/rules
+      - ./externals/irods-microservices:/microservices
   ires:
     build: ires/
     hostname: ires
@@ -48,7 +48,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
-      - ../irods-helper-cmd:/helpers
+      - ./externals/irods-helper-cmd:/helpers
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
   db:
@@ -100,7 +100,7 @@ services:
       - oculus_default
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ../channels:/opt/channels
+      - ./externals/channels:/opt/channels
   proxy:
     image: jwilder/nginx-proxy
     environment:
