--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
   metalnx:
-    image: metalnx/metalnx-web:1.0-latest
+    build: metalnx/
     hostname: metalnx
     environment:
       IRODS_HOST: irods
