--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       DWH_FRONTEND_ENV_VIRTUAL_HOST: dwh.${RIT_ENV}.rit.unimaas.nl
       VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
       OLS_URL: http://fhml-srv018.unimaas.nl:8081/ols-boot
+      LOGSTASH_TAGS: PACMAN
   irods:
     build: icat/
     hostname: irods
@@ -34,7 +35,9 @@ services:
       IRODS_RESOURCE_HOST: ires
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
+      LOGSPOUT: ignore
     volumes:
+      - logs:/var/lib/irods/iRODS/server/log
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
       - ./externals/irods-ruleset:/rules
@@ -47,6 +50,7 @@ services:
       PGPASSWORD: foobar
       LDAP_USER: M4i-nano-wiki
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
+      LOGSTASH_TAGS: IRES
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
@@ -59,6 +63,7 @@ services:
     environment:
       MYSQL_DATABASE: pacman
       MYSQL_ROOT_PASSWORD: foobar
+      LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
   irods-db:
@@ -66,6 +71,7 @@ services:
     hostname: irods-db
     environment:
       POSTGRES_PASSWORD: foobar
+      LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
   irods-frontend:
@@ -73,8 +79,11 @@ services:
     hostname: irods-frontend
     environment:
       VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
+      LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
+      - logs:/var/lib/tomcat8/logs/
+      - logs:/var/log/apache2/
   metalnx:
     build: metalnx/
     hostname: metalnx
@@ -86,6 +95,7 @@ services:
       IRODS_PASS: irods
       VIRTUAL_HOST: metalnx.${RIT_ENV}.rit.unimaas.nl
       VIRTUAL_PORT: 8080
+      LOGSTASH_TAGS: METALNX
     volumes:
       - /etc/localtime:/etc/localtime:ro
   mirthconnect:
@@ -98,6 +108,7 @@ services:
     environment:
       PGPASSWORD: foobar
       RIT_ENV: ${RIT_ENV}
+      LOGSTASH_TAGS: MIRTH
     networks:
       - default
       - oculus_default
@@ -108,8 +119,7 @@ services:
     image: jwilder/nginx-proxy
     environment:
       DEFAULT_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
-    logging:
-      driver: none
+      LOGSTASH_TAGS: PROXY
     ports:
       - "80:80"
     volumes:
@@ -118,9 +128,39 @@ services:
     networks:
       - default
       - oculus_default
-
+  elk:
+   build: elk/
+   hostname: elk
+   ports:
+     - "5601:5601"
+     - "9200:9200"
+     - "5044:5044"
+     - "5000/udp:5000/udp"
+   environment:
+    # otherwise logstash will keep sending its own logs to itself over and
+    # over... not fun
+    LOGSPOUT: ignore
+   volumes:
+      - /etc/localtime:/etc/localtime:ro 
+      - logs:/LOGS
+  logspout:
+   build: logspout/
+   volumes:
+    - /var/run/docker.sock:/tmp/docker.sock
+    - /etc/localtime:/etc/localtime:ro 
+   ports:
+    - "8001:80"
+   depends_on:
+    - "elk" 
+   environment:
+    DEBUG: "true" 
+    LOGSPOUT: ignore    
+   command: "logstash://elk:5000"    
 networks:
   default:
     driver: bridge
   oculus_default:
     external: true
+volumes:
+  logs:
+  
