Updated hardcoded year to 2017 in elk/ires.conf file

--- a/elk/IRES.conf
+++ b/elk/IRES.conf
@@ -44,10 +44,10 @@ filter {
 		   
 		   
 			
-			#Year is not present in the log date format, getting it HARDCODED
+			# TODO: Find better solution for Year is not present in the log date format, getting it HARDCODED
 			if [log_timestamp]{
 				mutate {
-				   replace => [ "log_timestamp", "%{log_timestamp} 2016" ]
+				   replace => [ "log_timestamp", "%{log_timestamp} 2017" ]
 				   remove_field => "log_year"
 				}
 				date { 
