Enabled debug statements in iCAT and iRES logs

--- a/elk/ICAT.conf
+++ b/elk/ICAT.conf
@@ -29,7 +29,7 @@ filter {
           match => { "path" => "^\/(.+\/)(?<file>.+)$" }
       }
     
-      if [level] == "DEBUG" {drop { }}
+     # if [level] == "DEBUG" {drop { }}
     
       # Get client IPs
       if [rods_msg] =~ /started/ {
