--- a/elk/IRES.conf
+++ b/elk/IRES.conf
@@ -8,7 +8,7 @@ filter {
 				match => { "message" => "%{SYSLOGTIMESTAMP:log_timestamp}\spid:%{POSINT:pid}\s%{LOGLEVEL:level}:\s+%{GREEDYDATA:rods_msg}" }
 		  }
 		
-		  if [level] == "DEBUG" {drop { }}
+		 # if [level] == "DEBUG" {drop { }}
 		
        mutate {
             add_field => { "logtrail" => "ires" }
