Created service account for MDL. For RITDEV-222

--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -1,5 +1,7 @@
 cfg_iRodsUser = service-dropzones@maastrichtuniversity.nl
 cfg_iRodsPassword = foobar
+cfg_iRodsUserMdl = service-mdl@maastrichtuniversity.nl
+cfg_iRodsPasswordMdl = foobar
 cfg_iRodsRestURL = http://irods-frontend/rest
 cfg_OlsApiURL = http://ols.tst.rit.unimaas.nl:8081/ols-boot/api
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
