Used proper naming convention for service accounts. For RITDEV-221 and RITDEV-222

--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -1,6 +1,6 @@
-cfg_iRodsUser = service-dropzones@maastrichtuniversity.nl
+cfg_iRodsUser = service-dropzones
 cfg_iRodsPassword = foobar
-cfg_iRodsUserMdl = service-mdl@maastrichtuniversity.nl
+cfg_iRodsUserMdl = service-mdl
 cfg_iRodsPasswordMdl = foobar
 cfg_iRodsRestURL = http://irods-frontend/rest
 cfg_OlsApiURL = http://ols.tst.rit.unimaas.nl:8081/ols-boot/api
