Major overhaul of elk stack Switch to newest version include x-pack safety

--- a/elk/PROXY.conf
+++ b/elk/PROXY.conf
@@ -16,7 +16,7 @@ filter {
               geoip {
                 source => "clientip"
                 target => "geoip"
-                database => "/etc/logstash/GeoLiteCity.dat"
+                database => "/etc/logstash/GeoLite2-City.mmdb"
                 add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ]
                 add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}"  ]
                 add_tag => ["geoip"]
