--- a/elk/IRES.conf
+++ b/elk/IRES.conf
@@ -29,7 +29,7 @@ filter {
 				  geoip {
 					source => "irods_client_addr"
 					target => "geoip"
-					database => "/etc/logstash/GeoLiteCity.dat"
+					database => "/etc/logstash/GeoLite2-City.mmdb"
 					add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ]
 					add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}"  ]
 					add_tag => ["geoip"]
