Added Mirth log parsing based on new log output

--- a/elk/MIRTH.conf
+++ b/elk/MIRTH.conf
@@ -4,6 +4,9 @@ filter {
         grok {
             match => { "message" => "%{LOGLEVEL:level} %{URIHOST:date} %{TIME:log_timestamp} %{SYSLOG5424SD:syslog}\s+%{GREEDYDATA:mirth_msg}" }
         }
+        grok {
+          match => [ "mirth_msg", "postprocessor: %{SYSLOG5424SD:channel} %{SYSLOG5424SD:destination} %{SYSLOG5424SD:errormsg}" ]
+        }
          mutate {
             add_field => { "logtrail" => "mirth" }
          }
