--- a/ires/Dockerfile
+++ b/ires/Dockerfile
@@ -49,6 +49,8 @@ ADD ./setup_responses /etc/irods/setup_responses
 ADD ./config.sh /opt/irods/config.sh
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
 ADD ./bootstrap_irods.sh /opt/irods/bootstrap_irods.sh
+ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
+ADD ./add_env_var.py /opt/irods/add_env_var.py
 RUN chmod a+x /opt/irods/*
 
 EXPOSE 1248 1247 8000
