--- a/elk/30-output.conf
+++ b/elk/30-output.conf
@@ -4,13 +4,30 @@ input {
     codec => json
     type  => "dockerlogs"
   }
+  beats {
+      port => 5555
+  }
 }
 
 output {
-  elasticsearch {
-    hosts => ["localhost"]
-    user => "elastic"
-    password => "changeme"
-  }
-  #stdout { codec => rubydebug }
+    if [type] == "dockerlogs" {
+      elasticsearch {
+        hosts => ["localhost"]
+        index => "filebeat-%{+YYYY.MM.dd}"
+        document_type => "dockerlog"
+        user => "elastic"
+        password => "changeme"
+      }
+     }
+     else {
+         elasticsearch {
+                hosts => ["localhost"]
+                index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
+                document_type => "%{[@metadata][type]}"
+                user => "elastic"
+                password => "changeme"
+              }
+     }
+
+      #stdout { codec => rubydebug }
 }
