--- a/elk/ICAT.conf
+++ b/elk/ICAT.conf
@@ -1,17 +1,3 @@
-input {
-  file {
-    type => "ICAT_rodslog"
-    tags => ["ICAT"]
-    path => [ "/LOGS/rodsLog.*" ]
-  }
-   file {
-    type => "ICAT_reLog"
-    tags => ["ICAT"]
-    path => [ "/LOGS/reLog.*" ]
-  }
-}
-
-
 filter {
      if "ICAT" in [tags] {
       if [message] =~ /environment variable set/ {drop { }}
@@ -62,7 +48,7 @@ filter {
        
        # Year is not present in the log date format, getting it from the filename
         grok {
-              match => { "path" => "%{YEAR:log_year}" }
+              match => { "source" => "%{YEAR:log_year}" }
         }
         
         
